# ai-devops-lab

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: branch-cleanup-report.agent.md  branch-coach.agent.md  check-scope.agent.md  cleanup-stale-branches.agent.md  close-branch.agent.md  commit-coach.agent.md  fix-validation.agent.md  learning-coach.agent.md  pr-coach.agent.md  rescope-branch.agent.md  roadmap-coach.agent.md  split-scope.agent.md  validate-changes.agent.md  workflow-help.agent.md
.github/instructions/: python.instructions.md  testing.instructions.md
.github/prompts/: branch-cleanup-report.prompt.md  check-scope.prompt.md  cleanup-stale-branches.prompt.md  close-branch.prompt.md  fix-validation.prompt.md  learn.prompt.md  new-branch.prompt.md  open-pr.prompt.md  prepare-commit.prompt.md  rescope-branch.prompt.md  roadmap-sync.prompt.md  split-scope.prompt.md  start-backlog.prompt.md  validate-changes.prompt.md  workflow-help.prompt.md
.github/workflows/: docs-check.yml  tests.yml
learning/: course-index.md
scripts/: check-docs.py  check_docs.py
src/docker_automation/: cli.py  config.py  docker_client.py
src/docker_automation/commands/: __init__.py  build.py  clean.py  logs.py  run.py
tests/integration/: test_cli_smoke.py
tests/unit/: test_build.py  test_clean.py  test_logs.py  test_run.py
